--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
