--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "ahooks": "^3.7.7",
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "qs": "^6.11.2",
